--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,12 @@
     <title>navigation</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <li><a href="table.html">Table</a></li>
+            <li><a href="form.html">Form</a></li>
+            <li><a href="table.html">about</a></li>
+        </nav>
+    </header>
 </body>
 </html>
